# optuna-integration

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  formats.sh  pyproject.toml  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md  file-filters.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  code-fix.yml  documentation.yml  feature-request.yml
.github/workflows/: botorch.yml  catalyst.yml  catboost.yml  checks-and-tests.yml  checks-integration.yml  checks.yml  checks_template.yml  cma.yml  coverage.yml  dask.yml  fastaiv2.yml  keras.yml  lightgbm.yml  mac-tests.yml  mlflow.yml  mxnet.yml  pypi-publish.yml  pytorch_distributed.yml  pytorch_ignite.yml  pytorch_lightning.yml  reviewdog.yml  shap.yml  sklearn.yml  skorch.yml  sphinx-build.yml  stale.yml  tensorboard.yml  tensorflow.yml  tests-mpi.yml  tests.yml  tfkeras.yml  wandb.yml  xgboost.yml
docs/: Makefile  make.bat
docs/source/: conf.py  index.rst  installation.rst
docs/source/_static/css/: custom.css
docs/source/_templates/: footer.html  layout.html
docs/source/reference/: index.rst
optuna_integration/: __init__.py  _imports.py  botorch.py  catalyst.py  catboost.py  chainer.py  chainermn.py  cma.py  comet.py  dask.py  fastaiv1.py  fastaiv2.py  keras.py  lightgbm.py  mlflow.py  pytorch_distributed.py  pytorch_lightning.py  shap.py  sklearn.py  skopt.py  skorch.py  tensorboard.py  tensorflow.py  wandb.py  xgboost.py
optuna_integration/_lightgbm_tuner/: __init__.py  _train.py  alias.py  optimize.py  sklearn.py
optuna_integration/allennlp/: _dump_best_config.py  _environment.py  _executor.py  _pruner.py  _variables.py
optuna_integration/botorch/: __init__.py  botorch.py  requirements.txt
optuna_integration/catalyst/: __init__.py
optuna_integration/catboost/: __init__.py  catboost.py  requirements.txt
optuna_integration/chainer/: __init__.py  chainer.py
optuna_integration/chainermn/: __init__.py  chainermn.py
optuna_integration/cma/: __init__.py  cma.py  requirements.txt
optuna_integration/comet/: __init__.py  comet.py  requirements.txt
optuna_integration/dask/: __init__.py  dask.py
optuna_integration/fastaiv1/: __init__.py
optuna_integration/fastaiv2/: __init__.py  fastaiv2.py
optuna_integration/keras/: __init__.py  keras.py
optuna_integration/lightgbm/: __init__.py  lightgbm.py  requirements.txt
optuna_integration/lightgbm/_lightgbm_tuner/: __init__.py  _train.py  optimize.py  sklearn.py
optuna_integration/mlflow/: __init__.py  mlflow.py
optuna_integration/mxnet/: __init__.py  mxnet.py
optuna_integration/pytorch_distributed/: __init__.py  pytorch_distributed.py  requirements.txt
optuna_integration/pytorch_ignite/: __init__.py  pytorch_ignite.py
optuna_integration/pytorch_lightning/: __init__.py  pytorch_lightning.py
optuna_integration/shap/: __init__.py  requirements.txt  shap.py
optuna_integration/sklearn/: __init__.py  requirements.txt  sklearn.py
optuna_integration/skopt/: __init__.py
optuna_integration/skorch/: __init__.py  requirements.txt  skorch.py
optuna_integration/tensorboard/: __init__.py  requirements.txt  tensorboard.py
optuna_integration/tensorflow/: __init__.py  requirements.txt  tensorflow.py
optuna_integration/tfkeras/: __init__.py  tfkeras.py
optuna_integration/trackio/: __init__.py  trackio.py
optuna_integration/wandb/: __init__.py  wandb.py
optuna_integration/xgboost/: __init__.py  xgboost.py
tests/: test_botorch.py  test_catalyst.py  test_catboost.py  test_chainer.py  test_chainermn.py  test_cma.py  test_comet.py  test_dask.py  test_fastaiv2.py  test_keras.py  test_lightgbm.py  test_mlflow.py  test_mxnet.py  test_pytorch_distributed.py  test_pytorch_ignite.py  test_pytorch_lightning.py  test_samplers.py  test_shap.py  test_sklearn.py  test_skorch.py  test_tensorboard.py  test_tensorflow.py  test_tfkeras.py  test_wandb.py  test_xgboost.py
tests/allennlp_tests/: example.jsonnet  example_with_executor_and_pruner.jsonnet  example_with_executor_and_pruner_distributed.jsonnet  example_with_include_package.jsonnet  pruning_test.jsonl  test_allennlp.py  tiny_single_id.py
tests/botorch/: test_botorch.py
tests/catalyst/: test_catalyst.py
tests/catboost/: test_catboost.py
tests/cma/: test_cma.py
tests/comet/: test_comet.py
tests/dask/: test_dask.py
tests/fastai/: test_fastaiv2.py
tests/fastaiv2/: test_fastaiv2.py
tests/importance_tests/: test_init.py
tests/integration_tests/: test_chainer.py
tests/keras/: test_keras.py
tests/lightgbm/: test_alias.py  test_lightgbm.py  test_optimize.py
tests/lightgbm/lightgbm_tuner_tests/: test_optimize.py
tests/lightgbm_tuner_tests/: test_alias.py  test_optimize.py
tests/mlflow/: test_mlflow.py
tests/mxnet/: test_mxnet.py
tests/pytorch/: test_pytorch_lightning.py
tests/pytorch_distributed/: test_pytorch_distributed.py
tests/pytorch_ignite/: test_pytorch_ignite.py
tests/pytorch_lightning/: test_pytorch_lightning.py
tests/sklearn/: test_sklearn.py
tests/skorch/: test_skorch.py
tests/tensorboard/: test_tensorboard.py
tests/tensorflow/: test_tensorflow.py
tests/tfkeras/: test_tfkeras.py
tests/trackio/: test_trackio.py
tests/wandb/: test_wandb.py
tests/xgboost/: test_xgboost.py
